salesforce_sfdx/main/default/objects/Account/fields/OSFMX_S_PLastModified__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_S_PLastModified__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>S&amp;P Last Modified</description>
    <label>Fecha de última actualización S&amp;P</label>
    <type>Date</type>
</CustomField>