salesforce_sfdx/main/default/objects/Account/fields/OSFMX_S_PValue__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_S_PValue__c</fullName>
    <description>S&amp;P Value</description>
    <label>Valor S&amp;P</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>