salesforce_sfdx/main/default/objects/Account/fields/OSFMX_Solution__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Solution__c</fullName>
    <label>Solución</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All in: Compresión, transporte y descompresión</fullName>
            </value>
            <value>
                <fullName>Auditoría de Eficiencia Energética</fullName>
            </value>
            <value>
                <fullName>Cogeneración (on site)</fullName>
            </value>
            <value>
                <fullName>Comercialización + Conducción</fullName>
            </value>
            <value>
                <fullName>Comercialización a través de un tercero</fullName>
            </value>
            <value>
                <fullName>Compresión molécula</fullName>
            </value>
            <value>
                <fullName>Conducción</fullName>
            </value>
            <value>
                <fullName>Conexiones Gas Natural</fullName>
            </value>
            <value>
                <fullName>Corporate PPA Renovable</fullName>
            </value>
            <value>
                <fullName>Corporate PPA Térmico</fullName>
            </value>
            <value>
                <fullName>Distribución + Comercialización</fullName>
            </value>
            <value>
                <fullName>Distribución Simple</fullName>
            </value>
            <value>
                <fullName>Ducto Dedicado</fullName>
            </value>
            <value>
                <fullName>ESCO</fullName>
            </value>
            <value>
                <fullName>EV Chargers</fullName>
            </value>
            <value>
                <fullName>EV Chargers + Flotas</fullName>
            </value>
            <value>
                <fullName>Excedentes</fullName>
            </value>
            <value>
                <fullName>Flotas de Vehículos Eléctricos</fullName>
            </value>
            <value>
                <fullName>Flotas de Vehículos GNV</fullName>
            </value>
            <value>
                <fullName>Hard Facility Management</fullName>
            </value>
            <value>
                <fullName>HVAC Retrofit</fullName>
            </value>
            <value>
                <fullName>Instalación estación GNV onsite</fullName>
            </value>
            <value>
                <fullName>Integrated Facility Management</fullName>
            </value>
            <value>
                <fullName>MEM</fullName>
            </value>
            <value>
                <fullName>Molécula pura</fullName>
            </value>
            <value>
                <fullName>O&amp;M Industrial</fullName>
            </value>
            <value>
                <fullName>O&amp;M Plantas Fotovoltaicas</fullName>
            </value>
            <value>
                <fullName>PPA Renovable</fullName>
            </value>
            <value>
                <fullName>PPA Térmico</fullName>
            </value>
            <value>
                <fullName>Rooftop PV (on site)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>