salesforce_sfdx/main/default/objects/Account/fields/OSFMX_Status__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Status__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proyecto</fullName>
            </value>
            <value>
                <fullName>Construcción</fullName>
            </value>
            <value>
                <fullName>Operativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>