salesforce_sfdx/main/default/objects/Account/fields/OSFMX_SupplyContractID__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SupplyContractID__c</fullName>
    <label>ID Contrato de Suministro</label>
    <length>20</length>
    <type>Text</type>
</CustomField>