salesforce_sfdx/main/default/objects/Account/fields/OSFMX_SupplyInstalationID__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SupplyInstalationID__c</fullName>
    <label>ID Instalación de suministro</label>
    <length>20</length>
    <type>Text</type>
</CustomField>