salesforce_sfdx/main/default/objects/Account/fields/OSFMX_SupplyPressure__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SupplyPressure__c</fullName>
    <label>Presión de suministro(bar)</label>
    <summarizedField>OSFMX_GasConsumption__c.OSFMX_SupplyPressure__c</summarizedField>
    <summaryForeignKey>OSFMX_GasConsumption__c.OSFMX_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>