salesforce_sfdx/main/default/objects/Account/fields/OSFMX_TradeName__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_TradeName__c</fullName>
    <label>Nombre Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>