salesforce_sfdx/main/default/objects/Account/fields/OSFMX_Voltage__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Voltage__c</fullName>
    <label>Voltaje</label>
    <summarizedField>OSFMX_ElectricityConsumption__c.OSFMX_VoltagebykV__c</summarizedField>
    <summaryForeignKey>OSFMX_ElectricityConsumption__c.OSFMX_Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>