salesforce_sfdx/main/default/objects/Account/fields/OSFMXParent2id__c.field-meta.xml
<CustomField>
    <fullName>OSFMXParent2id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent2id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Parent2id)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>