salesforce_sfdx/main/default/objects/Account/fields/OSFMXRelServiceAccount__c.field-meta.xml
<CustomField>
    <fullName>OSFMXRelServiceAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelServiceAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (RelServiceAccount)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>