salesforce_sfdx/main/default/objects/Account/fields/OSFMXTypeNameAcc__c.field-meta.xml
<CustomField>
    <fullName>OSFMXTypeNameAcc__c</fullName>
    <formula>IF($RecordType.Name = "Business", "Cuenta de Negocio",
IF($RecordType.Name = "Billing", "Cuenta de Facturación",
IF($RecordType.Name = "Service", "Cuenta de Servicio",
IF($RecordType.Name = "Grupo Económico", "Grupo Económico", null
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de cuenta</label>
    <type>Text</type>
</CustomField>