salesforce_sfdx/main/default/objects/Account/fields/OSFPE_fld_Aniversario_de_la_Empresa__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Aniversario_de_la_Empresa__c</fullName>
    <label>Aniversario de la empresa</label>
    <type>Date</type>
</CustomField>