salesforce_sfdx/main/default/objects/Account/fields/OSFPE_fld_FOSS_EEP__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_FOSS_EEP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FOSS EEP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas_FOSS_EEP</relationshipName>
    <type>Lookup</type>
</CustomField>