salesforce_sfdx/main/default/objects/Account/fields/OSFPE_fld_RUC__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_RUC__c</fullName>
    <label>RUC</label>
    <length>15</length>
    <type>Text</type>
</CustomField>