salesforce_sfdx/main/default/objects/Account/fields/OSMX_MaxiumDemand__c.field-meta.xml
<CustomField>
    <fullName>OSMX_MaxiumDemand__c</fullName>
    <label>Demanda máxima(kW)</label>
    <summarizedField>OSFMX_ElectricityConsumption__c.OSFMX_MaximumDemand__c</summarizedField>
    <summaryForeignKey>OSFMX_ElectricityConsumption__c.OSFMX_Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>