salesforce_sfdx/main/default/objects/Account/recordTypes/Cuenta_de_Negocio_Chile.recordType-meta.xml
<RecordType>
    <fullName>Cuenta_de_Negocio_Chile</fullName>
    <active>true</active>
    <label>Cuenta de Negocio Chile</label>
</RecordType>