salesforce_sfdx/main/default/objects/Account/recordTypes/Cuenta_de_Negocios_Colombia.recordType-meta.xml
<RecordType>
    <fullName>Cuenta_de_Negocios_Colombia</fullName>
    <active>true</active>
    <label>Cuenta de Negocios Colombia</label>
</RecordType>