salesforce_sfdx/main/default/objects/Account/recordTypes/EconomicGroup.recordType-meta.xml
<RecordType>
    <fullName>EconomicGroup</fullName>
    <active>true</active>
    <description>Nivel máximo de jerarquía de cuentas y se debe asociar a una cuenta de negocio.</description>
    <label>Grupo Económico</label>
</RecordType>