salesforce_sfdx/main/default/objects/Account/recordTypes/Grupo_Economico_Chile.recordType-meta.xml
<RecordType>
    <fullName>Grupo_Economico_Chile</fullName>
    <active>true</active>
    <label>Grupo Económico Chile</label>
</RecordType>