salesforce_sfdx/main/default/objects/Account/recordTypes/Grupo_Economico_Colombia.recordType-meta.xml
<RecordType>
    <fullName>Grupo_Economico_Colombia</fullName>
    <active>true</active>
    <label>Grupo Economico Colombia</label>
</RecordType>