salesforce_sfdx/main/default/objects/Account/recordTypes/OSFPE_rt_Cuenta_de_Negocio.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_Cuenta_de_Negocio</fullName>
    <active>true</active>
    <label>Cuenta de Negocio Peru</label>
</RecordType>