salesforce_sfdx/main/default/objects/Account/recordTypes/OSFPE_rt_Grupo_Economico.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_Grupo_Economico</fullName>
    <active>true</active>
    <label>Grupo Económico Peru</label>
</RecordType>