salesforce_sfdx/main/default/objects/Account/validationRules/Cuenta_servicio_asocia_negocio.validationRule-meta.xml
<ValidationRule>
    <fullName>Cuenta_servicio_asocia_negocio</fullName>
    <active>false</active>
    <description>Cuenta_servicio_asocia_negocio / Cuenta_servicio_asocia_facturacion</description>
    <errorConditionFormula>OR( AND( RecordType.Name = "Service", Parent.RecordType.Name =  " Billing "), AND ( RecordType.Name = " Billing", Parent.RecordType.Name &lt;> " Business "))</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>No puedes asociar una cuenta de servicio a un grupo económico.</errorMessage>
</ValidationRule>