salesforce_sfdx/main/default/objects/Account/validationRules/Digitos_NIT_Colombia.validationRule-meta.xml
<ValidationRule>
    <fullName>Digitos_NIT_Colombia</fullName>
    <active>true</active>
    <description>Valida cantidad dígitos en NIT</description>
    <errorConditionFormula>OR($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
        $Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;)&amp;&amp;
((RecordType.DeveloperName=&apos;Cuenta_de_Negocios_Colombia&apos;) || (RecordType.DeveloperName=&apos;Grupo_Economico_Colombia&apos;))
&amp;&amp; OR( LEN( OSFCO_NIT__c) &lt;&gt; 10, NOT(REGEX( OSFCO_NIT__c,&quot;^[0-9]+$&quot;)))</errorConditionFormula>
    <errorDisplayField>OSFCO_NIT__c</errorDisplayField>
    <errorMessage>Debe ingresar 10 dígitos del NIT sin guión.</errorMessage>
</ValidationRule>