salesforce_sfdx/main/default/objects/Account/validationRules/OSFMX_DireccionObligatoriaCuentaNegocio.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFMX_DireccionObligatoriaCuentaNegocio</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
RecordType.DeveloperName = &quot;Business&quot;,
OR(ISBLANK(BillingStreet),
OR(ISBLANK(BillingPostalCode),
OR(ISBLANK(BillingCity),
OR(ISBLANK(BillingState),
OR(ISBLANK(BillingCountry))))))
)</errorConditionFormula>
    <errorMessage>La dirección es obligatoria.</errorMessage>
</ValidationRule>