salesforce_sfdx/main/default/objects/Account/validationRules/OSFMX_DireccionObligatoriaCuentaServicio.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFMX_DireccionObligatoriaCuentaServicio</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Service&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
OR(ISBLANK(BillingStreet),
OR(ISBLANK(BillingPostalCode),
OR(ISBLANK(BillingCity),
OR(ISBLANK(BillingState),
OR(ISBLANK(BillingCountry))))))
)</errorConditionFormula>
    <errorMessage>Captura la dirección completa.</errorMessage>
</ValidationRule>