salesforce_sfdx/main/default/objects/Account/validationRules/OSFMX_RFC_Formato_SAT.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFMX_RFC_Formato_SAT</fullName>
    <active>true</active>
    <description>Validación de formato del RFC de acuerdo al SAT</description>
    <errorConditionFormula>AND (  RecordType.DeveloperName  = &quot;Business&quot;,
NOT (REGEX(  OSFMX_RFC__c , &quot;([A-ZÑ&amp;0-9]{3,4})([0-9]{2})([0][1-9]|[1][0-2])(([0][1-9]|[12][\\d])|[3][0-1])([A-Z0-9]{2})([A-Z0-9]{1})&quot;))
)</errorConditionFormula>
    <errorDisplayField>OSFMX_RFC__c</errorDisplayField>
    <errorMessage>El dato ingresado no cumple con el formato definido AAAaammddHHD para persona moral o AAAAaammddHHD para persona física</errorMessage>
</ValidationRule>