salesforce_sfdx/main/default/objects/Account/validationRules/OSFMX_ServicioasociaNegocioFacturacion.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFMX_ServicioasociaNegocioFacturacion</fullName>
    <active>true</active>
    <description>Una cuenta de servicio se puede asociar a una cuenta de negocio o a una cuenta de facturación.</description>
    <errorConditionFormula>AND (
$Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
RecordType.Name = &quot;Service&quot;,  
OR(Parent.RecordType.Name=&quot;Grupo Económico&quot;,Parent.RecordType.Name=&quot;Service&quot;)
)</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Debes asociar una cuenta Servicio a una cuenta de Negocio o Facturación.</errorMessage>
</ValidationRule>