salesforce_sfdx/main/default/objects/Account/validationRules/OSFPE_vr_Codigo_postal_numerico.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFPE_vr_Codigo_postal_numerico</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;OSFPE_rt_Cuenta_de_Negocio&apos; &amp;&amp;
NOT(ISNUMBER(BillingPostalCode))</errorConditionFormula>
    <errorMessage>El código postal debe ser un valor numérico.</errorMessage>
</ValidationRule>