salesforce_sfdx/main/default/objects/Account/validationRules/OSFPE_vr_Direccion_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFPE_vr_Direccion_obligatorio</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;OSFPE_rt_Cuenta_de_Negocio&apos; &amp;&amp; (
ISBLANK(BillingAddress) ||
ISBLANK( BillingStreet )||
ISBLANK( BillingPostalCode) ||
ISBLANK( BillingCity )||
ISBLANK( BillingCountry ))</errorConditionFormula>
    <errorMessage>Se deben completar todos los campos de dirección: calle, distrito, código postal, departamento y país.</errorMessage>
</ValidationRule>