salesforce_sfdx/main/default/objects/Account/validationRules/OSFPE_vr_Formato_RUC.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFPE_vr_Formato_RUC</fullName>
    <active>true</active>
    <description>Regla de validación que permitirá validar el número de RUC ingresado.</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;OSFPE_rt_Cuenta_de_Negocio&apos; &amp;&amp;
(
				NOT(ISNUMBER(OSFPE_fld_RUC__c)) ||
    LEN(OSFPE_fld_RUC__c) &lt;&gt; 11 ||
    LEFT(OSFPE_fld_RUC__c, 2) &lt;&gt; &apos;20&apos;
)</errorConditionFormula>
    <errorMessage>El número de RUC ingresado no es un valor válido. Debe iniciar con &apos;20&apos; y contar con 11 números.</errorMessage>
</ValidationRule>