salesforce_sfdx/main/default/objects/Account/validationRules/vlocity_cmt__EnforceAutoPaymentMethodPicked.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__EnforceAutoPaymentMethodPicked</fullName>
    <active>false</active>
    <description>Auto payment method and auto payment amount need to be filled when auto payment is checked.</description>
    <errorConditionFormula>( vlocity_cmt__EnableAutopay__c )  &amp;&amp;  (ISNULL( vlocity_cmt__AutoPaymentMethodId__c )  ||    ISPICKVAL( vlocity_cmt__AutoPaymentAmount__c , &apos;&apos;)  )</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__EnableAutopay__c</errorDisplayField>
    <errorMessage>Please choose the auto payment method and payment amount to enable the auto payment.</errorMessage>
</ValidationRule>