salesforce_sfdx/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>OSFMX_OwnerFullName__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las Cuentas</label>
</ListView>