salesforce_sfdx/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>OSFMX_OwnerFullName__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Cuentas</label>
</ListView>