salesforce_sfdx/main/default/objects/Account/listViews/Todas_Cta_Negocio.listView-meta.xml
<ListView>
    <fullName>Todas_Cta_Negocio</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>OSFMX_OwnerFullName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.vlocity_cmt__Business</value>
    </filters>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>5/20/2021 12:00 AM</value>
    </filters>
    <label>Todas Cta. Negocio</label>
</ListView>