salesforce_sfdx/main/default/objects/Account/listViews/Todas_Cta_Servcio.listView-meta.xml
<ListView>
    <fullName>Todas_Cta_Servcio</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>OSFMX_OwnerFullName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.vlocity_cmt__Service</value>
    </filters>
    <label>Todas Cta. Servicio</label>
</ListView>