salesforce_sfdx/main/default/objects/Account/listViews/Todas_Gpo_Economico.listView-meta.xml
<ListView>
    <fullName>Todas_Gpo_Economico</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>OSFMX_GlobalEngieAccount__c</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.EconomicGroup</value>
    </filters>
    <label>Todas Gpo. Económico</label>
</ListView>